# claude-code-gateway

./: .env.example  .gitignore  Dockerfile  README.md  chatdragon.py  chatdragon_completions.py  docker-compose.yml  open_webui_pipe.py  open_webui_pipe_thinking.py  pyproject.toml  test_sse_events.py
docs/: claude-code-system-prompt-reference.md
examples/: openai_sdk.py  session_continuity.py  streaming.py
pipes/: chatdragon.py  chatdragon_completions.py  open_webui_pipe_thinking.py  vqa.py
src/: admin_auth.py  admin_page.py  admin_service.py  auth.py  backend_registry.py  claude_cli.py  codex_cli.py  constants.py  image_handler.py  landing_page.py  main.py  message_adapter.py  models.py  parameter_validator.py  request_logger.py  runtime_config.py  session_manager.py  streaming_utils.py  system_prompt.py
tests/: conftest.py  test_admin_auth_unit.py  test_admin_features.py  test_admin_service_unit.py  test_admin_skills.py  test_anthropic_messages.py  test_auth_unit.py  test_backend_registry_unit.py  test_backends_init_unit.py  test_claude_cli_unit.py  test_claude_sandbox.py  test_codex_cli.py  test_codex_cli_unit.py  test_codex_client_unit.py  test_edge_cases_unit.py  test_image_endpoints.py  test_image_handler.py  test_main_api_unit.py  test_main_coverage_unit.py  test_main_helpers_unit.py  test_mcp_config.py  test_message_adapter_unit.py  test_openwebui_session.py  test_property_based.py  test_request_logger.py  test_runtime_config.py  test_sdk_migration.py  test_session_complete.py  test_session_manager_unit.py  test_streaming_coverage_unit.py  (+5 more)
(+26 files in other folders)
