[project]
name = "claude-code-openai-wrapper"
version = "2.2.0"
description = "OpenAI API-compatible wrapper for Claude Code"
authors = [{name = "Richard Atkinson", email = "richardatk01@gmail.com"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.2",
    "sse-starlette>=2.1.3",
    "python-multipart>=0.0.18",
    "claude-agent-sdk>=0.1.50",
    "slowapi>=0.1.9",
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=7.0.0",
    "mypy>=1.14.0",
    "bandit>=1.8.0",
    "safety>=3.2.0",
    "hypothesis>=6.122.0",
]

[project.scripts]
claude-wrapper = "src.main:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: Integration tests (real subprocess with mock binary)",
    "codex_binary: Requires real Codex CLI (opt-in: RUN_CODEX_BINARY_TESTS=1)",
    "slow: Tests taking more than 5 seconds",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
